Refactor order service to use MongoDB, update application properties, and modify repository and model classes